--- a/index.html
+++ b/index.html
@@ -31,17 +31,26 @@
                     adipisicing eli</p>
             </div>
 
+
+
+
         </section class="box-caption">
         <div class="box">
-            <p class="box-model">1200</p>
-            <p class="box-model">1500</p>
-            <p class="box-modele">2000</p>
-            <p class="box-model">5000</p>
-            <p class="box-model">1000</p>
+            <div class="box-model">1200</div>
+            <div class="box-model">1500</div>
+            <div class="box-modele">2000</div>
+            <div class="box-model">5000</div>
+            <div class="box-model">1000</div>
         </div>
+
+
+
+
+
+
         <div class="center">
             <div>Other amount (tk) </div>
-            <hr>
+            <hr class="hr">
             <div>
                 <input class="button" type="button" value="Donate Now">
             </div>
@@ -105,15 +114,9 @@
                         quas recusandae non, officia id natus animi!</p>
                     <input class="button" type="button" value="How to contrebuite">
                 </div>
-                <div><img src="images/donation11.jpg" alt="" height="400" width="500"></div>
-
-
+                <div><img src="images/donation11.jpg" alt="" height="400" width="500">
+                </div>
             </div>
-
-
-
-
-
         </section>
         <section>
             <div class="box-2">
@@ -142,6 +145,90 @@
 
         </section>
         <section>
+            <div class="box-2">
+                <div>
+
+                    <h2 class="salter">Their lives depend on your donation</h2>
+                    <p>Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Cumque adipisci alias quis similique
+                        ducimus, sint perspiciatis incidunt voluptatum tempore obcaecati aliquam sed totam, atque
+                        explicabo delectus, quaerat ut dolores dolorum?</p>
+                    <p>Lorem ipsum dolor
+                        sit amet consectetur, adipisicing elit. Impedit accusamus minima consequuntur
+                        odit est assumenda aspernatur cum, maiores repellendus, facilis voluptatibus voluptatem illum
+                        quas recusandae non, officia id natus animi!</p>
+                    <input class="button" type="button" value="How to contrebuite">
+                </div>
+                <div><img src="images/donation0.jpg" alt="" height="400" width="500">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="box-2">
+                <div>
+                </div>
+                <div>
+                    <img src="images/donation10.jpg" alt="" height="400" width="500">
+                </div>
+                <div>
+                    <h2 class="salter">Their lives depend on your donation</h2>
+                    <p>Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Cumque adipisci alias quis similique
+                        ducimus, sint perspiciatis incidunt voluptatum tempore obcaecati aliquam sed totam, atque
+                        explicabo delectus, quaerat ut dolores dolorum?</p>
+                    <p>Lorem ipsum dolor sit amet
+                        consectetur, adipisicing elit. Id repudiandae beatae dolorem. Esse,
+                        nobis doloremque? Molestias minus, excepturi culpa reiciendis, ullam esse quidem consequatur sit
+                        optio corporis sunt voluptates minima.</p>
+                    <input class="button" type="button" value="How to contrebuite">
+
+
+                </div>
+
+
+        </section>
+        <section>
+            <div class="box-2">
+                <div>
+
+                    <h2 class="salter">Their lives depend on your donation</h2>
+                    <p>Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Cumque adipisci alias quis similique
+                        ducimus, sint perspiciatis incidunt voluptatum tempore obcaecati aliquam sed totam, atque
+                        explicabo delectus, quaerat ut dolores dolorum?</p>
+                    <p>Lorem ipsum dolor
+                        sit amet consectetur, adipisicing elit. Impedit accusamus minima consequuntur
+                        odit est assumenda aspernatur cum, maiores repellendus, facilis voluptatibus voluptatem illum
+                        quas recusandae non, officia id natus animi!</p>
+                    <input class="button" type="button" value="How to contrebuite">
+                </div>
+                <div><img src="images/donation3.jpg" height=" 400" width="500">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="box-2">
+                <div>
+                </div>
+                <div><img src="images/donation13.jpg" height="400" width="500"></div>
+                <div>
+                    <h2 class="salter">Their lives depend on your donation</h2>
+                    <p>Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Cumque adipisci alias quis similique
+                        ducimus, sint perspiciatis incidunt voluptatum tempore obcaecati aliquam sed totam, atque
+                        explicabo delectus, quaerat ut dolores dolorum?</p>
+                    <p>Lorem ipsum dolor sit amet
+                        consectetur, adipisicing elit. Id repudiandae beatae dolorem. Esse,
+                        nobis doloremque? Molestias minus, excepturi culpa reiciendis, ullam esse quidem consequatur sit
+                        optio corporis sunt voluptates minima.</p>
+                    <input class="button" type="button" value="How to contrebuite">
+
+
+                </div>
+
+
+        </section>
+        <section>
             <div class="donation-head">
                 <h1 class="head">Get My Updates</h1>
                 <p class="text-discription">Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -151,12 +238,28 @@
             </div>
         </section>
         <section>
-            <div>
-                <input class="button" type="button" value="Subscribe">
+            <div class="div">
+                <div>
+                    <input type="text" class="email" name="" id="" placeholder="Email">
+                </div>
+                <div> <input class="button" type="button" value=" subscription"> </div>
+
             </div>
         </section>
     </main>
+
+
+
     <footer>
+
+        <div class="footer">
+            <small>
+                <p>mdhasheburrahmah@gmail.com || 01777441366</p>
+                <P>copyright@2025//BD</P>
+            </small>
+            <h3 class="right">Devloper:MD:HASHEBUR RAHMAN</h3>
+
+        </div>
 
 
     </footer>
